--- a/src/css/style.css
+++ b/src/css/style.css
@@ -321,15 +321,15 @@ pre[class*="language-"] {
   margin: 1rem;
 }
 
-.copy-btn {
+.btn-copy {
   position: absolute;
   bottom: -3.75rem;
   right: 1rem;
 }
-.copy-btn.btn:hover {
+.btn-copy.btn:hover {
   background-color: rgba(128, 128, 128, 0.1);
 }
-.copy-btn::before {
+.btn-copy::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -340,7 +340,7 @@ pre[class*="language-"] {
   opacity: 0;
   transition: opacity 0.3s, transform 0.2s;
 }
-.copy-btn:active::before {
+.btn-copy:active::before {
   opacity: 0.8;
   transform: scale(0);
   transition: transform 0s, opacity 0s;
